[package]
name = "rust-nginx-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.x86_64-unknown-linux-musl]
linker = "rust-lld"

[dependencies]
tokio = { version = "1", features = ["full"] }
prometheus-client = "0.22.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
axum = { version = "0.6.18" }
clap = { version = "4.4.8", features = ["derive"] }
